[gd_scene load_steps=20 format=3 uid="uid://b6wocr0vo5s4v"]

[ext_resource type="Script" path="res://scripts/debug_content.gd" id="1_jlyus"]
[ext_resource type="Script" path="res://scripts/mp_label.gd" id="2_3h2jk"]
[ext_resource type="Theme" uid="uid://c6pbhcyqdefqk" path="res://themes/monospace_font.tres" id="2_5bhpe"]
[ext_resource type="Script" path="res://scripts/hp_label.gd" id="3_jj2ny"]
[ext_resource type="Script" path="res://scripts/sp_label.gd" id="3_kowqt"]
[ext_resource type="Script" path="res://scripts/ap_label.gd" id="3_qpwvx"]
[ext_resource type="Script" path="res://scripts/theme_label.gd" id="4_pa4py"]
[ext_resource type="Theme" uid="uid://bkynhi7gd36bl" path="res://themes/menu_btn.tres" id="8_lqg4h"]
[ext_resource type="FontFile" uid="uid://cukp5skadwgit" path="res://fonts/JetBrainsMono-VariableFont_wght.ttf" id="9_y33yi"]
[ext_resource type="Script" path="res://scripts/minimax.gd" id="10_4e6rj"]
[ext_resource type="Script" path="res://scripts/debug_minigame.gd" id="11_y5yt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjahq"]
bg_color = Color(0, 0, 0, 0.290196)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.574998, 0.574998, 0.574998, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 14.0
expand_margin_top = 14.0
expand_margin_right = 14.0
expand_margin_bottom = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x84kg"]
bg_color = Color(0, 0, 0, 0.290196)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.574998, 0.574998, 0.574998, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 14.0
expand_margin_top = 14.0
expand_margin_right = 14.0
expand_margin_bottom = 14.0

[sub_resource type="LabelSettings" id="LabelSettings_itiye"]
line_spacing = 5.0

[sub_resource type="GDScript" id="GDScript_v57jq"]
script/source = "extends Label

var og_text = self.text

func _process(_delta):
	self.text = og_text % [
		str(find_parent('DebugContent').music_track.stream.resource_path.get_file().get_basename())
		]
"

[sub_resource type="GDScript" id="GDScript_oisou"]
script/source = "extends Label


func _process(_delta):
	text = '%.2f' % find_parent('DebugContent').background.tint_opacity
"

[sub_resource type="GDScript" id="GDScript_n68jj"]
script/source = "extends HSlider

func _process(_delta):
	if value >=.95 and value <=1.05:
		value = 1.0
"

[sub_resource type="GDScript" id="GDScript_1tr3v"]
script/source = "extends Label

func _process(_delta):
	text = '%.2f' % find_parent('DebugContent').clippy_area.clippy_opacity
"

[sub_resource type="LabelSettings" id="LabelSettings_na8du"]
font_size = 12

[node name="DebugContent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlyus")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 386.0
offset_right = 511.0
offset_bottom = 537.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fjahq")

[node name="HPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 29.0
offset_right = 225.0
offset_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 6
theme = ExtResource("2_5bhpe")
text = "HP: %s (%s/sec)"
script = ExtResource("3_jj2ny")

[node name="MPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 29.0
offset_right = 455.0
offset_bottom = 57.0
size_flags_horizontal = 0
size_flags_vertical = 6
theme = ExtResource("2_5bhpe")
text = "MP: %s (%s/sec)"
script = ExtResource("2_3h2jk")

[node name="APLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 274.0
offset_top = 69.0
offset_right = 455.0
offset_bottom = 97.0
size_flags_horizontal = 0
size_flags_vertical = 6
theme = ExtResource("2_5bhpe")
text = "AP: %s (%s/sec)"
script = ExtResource("3_qpwvx")

[node name="SPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 69.0
offset_right = 225.0
offset_bottom = 97.0
size_flags_horizontal = 0
size_flags_vertical = 6
theme = ExtResource("2_5bhpe")
text = "SP: %s (%s/sec)"
script = ExtResource("3_kowqt")

[node name="ThemeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 130.0
offset_right = 183.0
offset_bottom = 158.0
theme = ExtResource("2_5bhpe")
text = "Theme: %s"
script = ExtResource("4_pa4py")

[node name="MusicTrack" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 190.0
offset_right = 507.0
offset_bottom = 242.0
theme = ExtResource("2_5bhpe")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_x84kg")
text = "
%s"
label_settings = SubResource("LabelSettings_itiye")
autowrap_mode = 3
text_overrun_behavior = 3
script = SubResource("GDScript_v57jq")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 378.0
offset_right = 505.0
offset_bottom = 405.0
theme = ExtResource("2_5bhpe")
text = "Drain Strength"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 386.0
offset_right = 265.0
offset_bottom = 413.0
theme = ExtResource("2_5bhpe")
text = "Damage Tint"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 490.0
offset_right = 505.0
offset_bottom = 517.0
theme = ExtResource("2_5bhpe")
text = "Screen Tint Strength"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 187.0
offset_right = 195.0
offset_bottom = 214.0
theme = ExtResource("2_5bhpe")
text = "Current Track:"

[node name="Strength" type="Label" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 405.0
offset_right = 485.0
offset_bottom = 432.0
theme = ExtResource("2_5bhpe")
text = "1.0"

[node name="Strength2" type="Label" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 517.0
offset_right = 485.0
offset_bottom = 544.0
theme = ExtResource("2_5bhpe")
text = "1.0"
script = SubResource("GDScript_oisou")

[node name="OverlayStrength" type="HSlider" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 522.0
offset_right = 430.0
offset_bottom = 538.0
max_value = 1.0
step = 0.01
value = 0.1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 410.0
offset_right = 430.0
offset_bottom = 426.0
theme = ExtResource("2_5bhpe")
max_value = 4.0
step = 0.01
value = 1.0
script = SubResource("GDScript_n68jj")

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 265.0
offset_top = 435.0
offset_right = 505.0
offset_bottom = 462.0
theme = ExtResource("2_5bhpe")
text = "Clippy Opacity"
horizontal_alignment = 1

[node name="Strength3" type="Label" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 462.0
offset_right = 485.0
offset_bottom = 489.0
theme = ExtResource("2_5bhpe")
text = "1.0"
script = SubResource("GDScript_1tr3v")

[node name="HSlider2" type="HSlider" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 467.0
offset_right = 430.0
offset_bottom = 483.0
theme = ExtResource("2_5bhpe")
max_value = 1.0
step = 0.01
value = 0.5

[node name="GlassesBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 572.0
offset_right = 318.0
offset_bottom = 605.0
theme = ExtResource("8_lqg4h")
theme_override_colors/font_color = Color(1, 1, 0.905882, 1)
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 20
text = "Toggle Glasses"

[node name="HatBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 625.0
offset_right = 318.0
offset_bottom = 658.0
theme = ExtResource("8_lqg4h")
theme_override_colors/font_color = Color(1, 1, 0.905882, 1)
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 20
text = "Toggle Hat"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 278.0
offset_right = 238.0
offset_bottom = 343.0
theme = ExtResource("8_lqg4h")
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 20
text = "FULL RESTORE"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 279.0
offset_top = 274.0
offset_right = 495.0
offset_bottom = 308.0
theme = ExtResource("2_5bhpe")
text = "Animation Override"

[node name="AnimSelect" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 317.0
offset_right = 481.0
offset_bottom = 347.0
theme = ExtResource("2_5bhpe")

[node name="WindowSizeControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 42.0
offset_bottom = 43.0
script = ExtResource("10_4e6rj")
scale_factor = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowSizeControls"]
layout_mode = 0
offset_left = 334.0
offset_top = 588.0
offset_right = 515.0
offset_bottom = 643.0
theme_override_constants/separation = 20

[node name="MinimiseButton" type="Button" parent="WindowSizeControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_lqg4h")
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 18
text = "-"

[node name="NormaliseButton" type="Button" parent="WindowSizeControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_lqg4h")
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 18
text = "Normal"

[node name="MaximiseButton" type="Button" parent="WindowSizeControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_lqg4h")
theme_override_fonts/font = ExtResource("9_y33yi")
theme_override_font_sizes/font_size = 18
text = "+"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 384.0
offset_right = 61.0
offset_bottom = 416.0

[node name="MinigameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 473.0
offset_right = 186.0
offset_bottom = 503.0
theme = ExtResource("2_5bhpe")
text = "Minigame:"

[node name="Minigame" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 508.0
offset_right = 186.0
offset_bottom = 538.0
theme = ExtResource("2_5bhpe")
text = "%s"
label_settings = SubResource("LabelSettings_na8du")
script = ExtResource("11_y5yt0")

[node name="ClippyBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 123.0
offset_right = 508.0
offset_bottom = 157.0
theme = ExtResource("8_lqg4h")
text = "Clippy Mode"

[node name="HolidayBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 123.0
offset_right = 348.0
offset_bottom = 157.0
theme = ExtResource("8_lqg4h")
toggle_mode = true
text = "Holiday Mode"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 600.0
offset_right = 125.0
offset_bottom = 629.0
theme = ExtResource("2_5bhpe")
text = "%s"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 600.0
offset_right = 66.0
offset_bottom = 629.0
theme = ExtResource("2_5bhpe")
text = "FPS:"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 428.0
offset_right = 174.0
offset_bottom = 463.0
theme = ExtResource("2_5bhpe")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Unlock FPS"

[connection signal="value_changed" from="OverlayStrength" to="." method="_on_overlay_strength_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="button_down" from="GlassesBtn" to="." method="_on_glasses_btn_button_down"]
[connection signal="button_down" from="HatBtn" to="." method="_on_hat_btn_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="item_selected" from="AnimSelect" to="." method="_on_anim_select_item_selected"]
[connection signal="button_down" from="WindowSizeControls/HBoxContainer/MinimiseButton" to="WindowSizeControls" method="_on_min_down"]
[connection signal="button_down" from="WindowSizeControls/HBoxContainer/NormaliseButton" to="WindowSizeControls" method="_on_normalise_down"]
[connection signal="button_down" from="WindowSizeControls/HBoxContainer/MaximiseButton" to="WindowSizeControls" method="_on_max_down"]
[connection signal="popup_closed" from="ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="pressed" from="ClippyBtn" to="." method="_on_clippy_btn_pressed"]
[connection signal="toggled" from="HolidayBtn" to="." method="_on_button_3_toggled"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
